# ksi-oidc-python

./: .env  .gitignore  README.md  pyproject.toml
common/: pyproject.toml
common/src/ksi_oidc_common/: client.py  errors.py  registration.py  tokens.py
django/: README.md  pyproject.toml
django/src/ksi_oidc_django/: _common.py  _consts.py  _user_sessions.py  apps.py  backends.py  decorators.py  middleware.py  models.py  urls.py  utils.py  views.py
django/src/ksi_oidc_django/management/: _input_utils.py
django/src/ksi_oidc_django/management/commands/: oidc_info.py  oidc_init_dynamic.py  oidc_init_static.py  oidc_reset.py  oidc_set_issuer.py  oidc_update_config.py
django/src/ksi_oidc_django/migrations/: 0001_initial.py
fastapi/: README.md  pyproject.toml
fastapi/src/ksi_oidc_fastapi/: __init__.py  auth_middleware.py  auth_router.py  example_router.py  main.py  models.py  oidc_client.py  session_manager.py
fastapi/src/ksi_oidc_fastapi/templates/: callback_error.html
