[project]
# The root package is not versioned and should not be installed anyway
version = "0"
name = "ksi-oidc-python"
requires-python = ">=3.13.0"
dependencies=[
    "ksi_oidc_django"
]

[tool.uv]
package=false

[tool.uv.workspace]
members = ["common", "django"]

[tool.uv.sources]
ksi-oidc-common = { workspace = true }
ksi-oidc-django = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
