[project]
# The root package is not versioned and should not be installed anyway
version = "0"
name = "ksi-oidc-python"
requires-python = ">=3.13.0"
dependencies=[
    "ksi_oidc_django",
    "ksi_oidc_fastapi"
]
license="MPL-2.0"

[tool.uv]
package=false

[tool.uv.workspace]
members = ["common", "django", "fastapi"]

[tool.uv.sources]
ksi-oidc-common = { workspace = true }
ksi-oidc-django = { workspace = true }
ksi-oidc-fastapi = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
