[project]
name = "ksi-oidc-common"
description = "The common code for the OpenID Connect client created by KSIUJ"
requires-python = ">=3.13.0"
version = "0.5.0"
authors = [
    { name = "dominik-korsa" }
]
dependencies = [
    "oic>=1.7.0",
    "types-requests>=2.32.4",
]
license="MPL-2.0"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
