[project]
name = "ksi-oidc-django"
description = "The OpenID Connect plugin Django created by KSIUJ"
requires-python = ">=3.13.0"
version = "0.1.2"
authors = [
    { name = "dominik-korsa" }
]
dependencies = [
    "django>=5.2.6",
    "ksi-oidc-common>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
