[project]
name = "ksi-oidc-fastapi"
description = "The OpenID Connect plugin FastApi created by KSIUJ"
requires-python = ">=3.13.0"
version = "1.0.0"
authors = [{ name = "opwip-Yaroslav-Kolesnik" }]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "ksi-oidc-common>=1.0.0-beta.0",
]
license = "MPL-2.0"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
